# cppbackend

./: README.md
.github/workflows/: main.yml
sprint1/problems/final_task/: Dockerfile
sprint1/problems/final_task/solution/: Dockerfile
sprint1/problems/final_task/src/: http_server.h  json_loader.cpp  json_loader.h  request_handler.h
sprint1/problems/map_json/solution/src/: main.cpp  (+2 more)
sprint1/problems/sum/precode/: main.cpp
sprint1/problems/sum/solution/: main.cpp
sprint2/problems/final_task/: CMakeLists.txt
sprint2/problems/final_task/src/: app.h  main.cpp  model.cpp  model.h  request_handler.h
sprint2/problems/join_game/solution/: CMakeLists.txt
sprint2/problems/logger/solution/: my_logger.h
sprint2/problems/server_logging/solution/: CMakeLists.txt  Dockerfile
sprint2/problems/static_content/solution/: CMakeLists.txt  README.md  conanfile.txt
sprint3/problems/ammo/solution/: ammo.txt  load.yaml
sprint3/problems/final_task/: CMakeLists.txt
sprint3/problems/final_task/src/: main.cpp
sprint3/problems/final_task/tests/: model_tests.cpp
sprint3/problems/find_return/solution/: CMakeLists.txt
sprint3/problems/flamegraph/solution/: shoot.py
sprint3/problems/gather-tests/solution/: CMakeLists.txt  Dockerfile
sprint3/problems/gather-tests/solution/src/: collision_detector.cpp
sprint3/problems/gather/solution/: CMakeLists.txt  Dockerfile
sprint3/problems/load/solution/: ammo.txt  load.yaml
sprint3/problems/scores/solution/: CMakeLists.txt
sprint3/problems/static_lib/solution/: CMakeLists.txt
sprint3/problems/static_lib/solution/src/: app.cpp
sprint3/problems/static_lib/solution/tests/: model_tests.cpp
sprint4/problems/bookypedia-1/solution/: CMakeLists.txt
sprint4/problems/bookypedia-1/solution2/: CMakeLists.txt
sprint4/problems/bookypedia-2/solution/: CMakeLists.txt
sprint4/problems/db_of_books/solution/: CMakeLists.txt
sprint4/problems/final_task/: CMakeLists.txt  Dockerfile
sprint4/problems/final_task/src/: main.cpp
sprint4/problems/final_task/tests/: model_tests.cpp
(+183 files in other folders)
